# ChatBulario

./: .env.example  .gitignore  AGENTS.md  README.md  benchmark_providers.py  build_dataset.py  collector.py  coverage_test.py  dataset_card.md  discovery.py  enrich_all.py  export.py  process_all.py  pyproject.toml  segment_all.py  status.py
docs/: anvisa-bulario-api.md  llm-providers.md  pipeline-architecture.md  project-status.md  proximos-passos.md
process/: meta_llm.py  segment.py  split.py
src/: benchmark_providers.py  enrich_all.py  export.py  import_existing.py  migrate_meta.py
src/process/: extract.py  meta_llm.py  segment.py  structure.py
