[project]
name = "chatbulario-discovery"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=1.21.0",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
]
